tests/snapshots/lexer_snapshots__lexer_all@tokens-36.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/non_keyword_literal_becomes_identifier.of
---
Ok(
    [
        Token {
            token_type: Identifier(
                "structure",
            ),
            position: 9,
            line: 1,
            column: 10,
        },
    ],
)
