tests/snapshots/lexer_snapshots__lexer_all@tokens-37.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/punctuation_tokens_are_recognized.of
---
Ok(
    [
        Token {
            token_type: LeftParen,
            position: 1,
            line: 1,
            column: 2,
        },
        Token {
            token_type: RightParen,
            position: 2,
            line: 1,
            column: 3,
        },
        Token {
            token_type: LeftBrace,
            position: 3,
            line: 1,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 4,
            line: 1,
            column: 5,
        },
        Token {
            token_type: LeftBracket,
            position: 5,
            line: 1,
            column: 6,
        },
        Token {
            token_type: RightBracket,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Dot,
            position: 7,
            line: 1,
            column: 8,
        },
        Token {
            token_type: Comma,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Colon,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Semicolon,
            position: 10,
            line: 1,
            column: 11,
        },
    ],
)
