tests/snapshots/lexer_snapshots__lexer_all@tokens-39.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/scan_number_invalid_float_multiple_point.of
---
Err(
    InvalidNumber(
        "123.02",
        1,
        7,
    ),
)
