tests/snapshots/lexer_snapshots__lexer_all@tokens-4.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/04_lambdas.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "apply",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: LT,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: GT,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 18,
            line: 1,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Colon,
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: Comma,
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Identifier(
                "f",
            ),
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: Colon,
            position: 30,
            line: 1,
            column: 31,
        },
        Token {
            token_type: LeftParen,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 33,
            line: 1,
            column: 34,
        },
        Token {
            token_type: RightParen,
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: Minus,
            position: 36,
            line: 1,
            column: 37,
        },
        Token {
            token_type: GT,
            position: 37,
            line: 1,
            column: 38,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 39,
            line: 1,
            column: 40,
        },
        Token {
            token_type: RightParen,
            position: 40,
            line: 1,
            column: 41,
        },
        Token {
            token_type: Colon,
            position: 41,
            line: 1,
            column: 42,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 43,
            line: 1,
            column: 44,
        },
        Token {
            token_type: LeftBrace,
            position: 45,
            line: 1,
            column: 46,
        },
        Token {
            token_type: Identifier(
                "f",
            ),
            position: 49,
            line: 2,
            column: 4,
        },
        Token {
            token_type: LeftParen,
            position: 50,
            line: 2,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 55,
            line: 2,
            column: 10,
        },
        Token {
            token_type: RightParen,
            position: 56,
            line: 2,
            column: 11,
        },
        Token {
            token_type: RightBrace,
            position: 58,
            line: 3,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 68,
            line: 5,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 73,
            line: 5,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 74,
            line: 5,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 75,
            line: 5,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 76,
            line: 5,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 80,
            line: 5,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 82,
            line: 5,
            column: 23,
        },
        Token {
            token_type: Var,
            position: 88,
            line: 6,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "double",
            ),
            position: 95,
            line: 6,
            column: 13,
        },
        Token {
            token_type: Eq,
            position: 97,
            line: 6,
            column: 15,
        },
        Token {
            token_type: Function,
            position: 106,
            line: 6,
            column: 24,
        },
        Token {
            token_type: LeftParen,
            position: 107,
            line: 6,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 108,
            line: 6,
            column: 26,
        },
        Token {
            token_type: Colon,
            position: 109,
            line: 6,
            column: 27,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 113,
            line: 6,
            column: 31,
        },
        Token {
            token_type: RightParen,
            position: 114,
            line: 6,
            column: 32,
        },
        Token {
            token_type: Colon,
            position: 115,
            line: 6,
            column: 33,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 119,
            line: 6,
            column: 37,
        },
        Token {
            token_type: LeftBrace,
            position: 121,
            line: 6,
            column: 39,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 123,
            line: 6,
            column: 41,
        },
        Token {
            token_type: Star,
            position: 125,
            line: 6,
            column: 43,
        },
        Token {
            token_type: Int(
                "2",
            ),
            position: 127,
            line: 6,
            column: 45,
        },
        Token {
            token_type: RightBrace,
            position: 129,
            line: 6,
            column: 47,
        },
        Token {
            token_type: Semicolon,
            position: 130,
            line: 6,
            column: 48,
        },
        Token {
            token_type: Var,
            position: 136,
            line: 7,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "inc",
            ),
            position: 140,
            line: 7,
            column: 10,
        },
        Token {
            token_type: Eq,
            position: 145,
            line: 7,
            column: 15,
        },
        Token {
            token_type: Function,
            position: 154,
            line: 7,
            column: 24,
        },
        Token {
            token_type: LeftParen,
            position: 155,
            line: 7,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 156,
            line: 7,
            column: 26,
        },
        Token {
            token_type: Colon,
            position: 157,
            line: 7,
            column: 27,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 161,
            line: 7,
            column: 31,
        },
        Token {
            token_type: RightParen,
            position: 162,
            line: 7,
            column: 32,
        },
        Token {
            token_type: Colon,
            position: 163,
            line: 7,
            column: 33,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 167,
            line: 7,
            column: 37,
        },
        Token {
            token_type: LeftBrace,
            position: 169,
            line: 7,
            column: 39,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 171,
            line: 7,
            column: 41,
        },
        Token {
            token_type: Plus,
            position: 173,
            line: 7,
            column: 43,
        },
        Token {
            token_type: Int(
                "1",
            ),
            position: 175,
            line: 7,
            column: 45,
        },
        Token {
            token_type: RightBrace,
            position: 177,
            line: 7,
            column: 47,
        },
        Token {
            token_type: Semicolon,
            position: 178,
            line: 7,
            column: 48,
        },
        Token {
            token_type: Var,
            position: 185,
            line: 9,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 187,
            line: 9,
            column: 8,
        },
        Token {
            token_type: Eq,
            position: 189,
            line: 9,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "apply",
            ),
            position: 195,
            line: 9,
            column: 16,
        },
        Token {
            token_type: LT,
            position: 196,
            line: 9,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 199,
            line: 9,
            column: 20,
        },
        Token {
            token_type: GT,
            position: 200,
            line: 9,
            column: 21,
        },
        Token {
            token_type: LeftParen,
            position: 201,
            line: 9,
            column: 22,
        },
        Token {
            token_type: Int(
                "10",
            ),
            position: 203,
            line: 9,
            column: 24,
        },
        Token {
            token_type: Comma,
            position: 204,
            line: 9,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "double",
            ),
            position: 211,
            line: 9,
            column: 32,
        },
        Token {
            token_type: RightParen,
            position: 212,
            line: 9,
            column: 33,
        },
        Token {
            token_type: Semicolon,
            position: 213,
            line: 9,
            column: 34,
        },
        Token {
            token_type: Comment(
                " 20",
            ),
            position: 220,
            line: 9,
            column: 41,
        },
        Token {
            token_type: Var,
            position: 226,
            line: 10,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 228,
            line: 10,
            column: 8,
        },
        Token {
            token_type: Eq,
            position: 230,
            line: 10,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "apply",
            ),
            position: 236,
            line: 10,
            column: 16,
        },
        Token {
            token_type: LT,
            position: 237,
            line: 10,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 240,
            line: 10,
            column: 20,
        },
        Token {
            token_type: GT,
            position: 241,
            line: 10,
            column: 21,
        },
        Token {
            token_type: LeftParen,
            position: 242,
            line: 10,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 243,
            line: 10,
            column: 23,
        },
        Token {
            token_type: Comma,
            position: 244,
            line: 10,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "inc",
            ),
            position: 248,
            line: 10,
            column: 28,
        },
        Token {
            token_type: RightParen,
            position: 249,
            line: 10,
            column: 29,
        },
        Token {
            token_type: Semicolon,
            position: 250,
            line: 10,
            column: 30,
        },
        Token {
            token_type: Comment(
                " 21",
            ),
            position: 261,
            line: 10,
            column: 41,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 270,
            line: 12,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 271,
            line: 12,
            column: 9,
        },
        Token {
            token_type: StringLit(
                "a=",
            ),
            position: 275,
            line: 12,
            column: 13,
        },
        Token {
            token_type: Plus,
            position: 277,
            line: 12,
            column: 15,
        },
        Token {
            token_type: LeftParen,
            position: 279,
            line: 12,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 280,
            line: 12,
            column: 18,
        },
        Token {
            token_type: As,
            position: 283,
            line: 12,
            column: 21,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 287,
            line: 12,
            column: 25,
        },
        Token {
            token_type: RightParen,
            position: 288,
            line: 12,
            column: 26,
        },
        Token {
            token_type: Plus,
            position: 290,
            line: 12,
            column: 28,
        },
        Token {
            token_type: StringLit(
                " b=",
            ),
            position: 296,
            line: 12,
            column: 34,
        },
        Token {
            token_type: Plus,
            position: 298,
            line: 12,
            column: 36,
        },
        Token {
            token_type: LeftParen,
            position: 300,
            line: 12,
            column: 38,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 301,
            line: 12,
            column: 39,
        },
        Token {
            token_type: As,
            position: 304,
            line: 12,
            column: 42,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 308,
            line: 12,
            column: 46,
        },
        Token {
            token_type: RightParen,
            position: 309,
            line: 12,
            column: 47,
        },
        Token {
            token_type: RightParen,
            position: 310,
            line: 12,
            column: 48,
        },
        Token {
            token_type: Semicolon,
            position: 311,
            line: 12,
            column: 49,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 315,
            line: 13,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 317,
            line: 14,
            column: 2,
        },
    ],
)
