tests/snapshots/lexer_snapshots__lexer_all@tokens-41.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/scan_number_invalid_float_none_after_dot.of
---
Err(
    InvalidNumber(
        "123.",
        1,
        5,
    ),
)
