tests/snapshots/lexer_snapshots__lexer_all@tokens-44.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/single_ampersand_is_unexpected_character.of
---
Err(
    UnexpectedCharacter(
        '&',
        1,
        2,
    ),
)
