tests/snapshots/lexer_snapshots__lexer_all@tokens-45.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/slash_starts_comment_when_followed_by_slash.of
---
Ok(
    [
        Token {
            token_type: Var,
            position: 14,
            line: 2,
            column: 4,
        },
    ],
)
