tests/snapshots/lexer_snapshots__lexer_all@tokens-47.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/string_literal_is_scanned.of
---
Ok(
    [
        Token {
            token_type: StringLit(
                "hello world",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
    ],
)
