tests/snapshots/lexer_snapshots__lexer_all@tokens-48.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/token_position_line_and_column_are_updated.of
---
Ok(
    [
        Token {
            token_type: Identifier(
                "foo",
            ),
            position: 5,
            line: 2,
            column: 4,
        },
    ],
)
