tests/snapshots/lexer_snapshots__lexer_all@tokens-49.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/unterminated_string_returns_error.of
---
Err(
    UnterminatedString(
        1,
        14,
    ),
)
